# qa-guru-python-22

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
qa_guru_python_22/models/pages/: search_page.py
qa_guru_python_22/utils/: allure_attach.py  file.py
tests/: conftest.py  test_app_wiki.py
